          return tokens.asList()

      # this parse action returns the tokens as a list, and pyparsing will
      # maintain its list type in the final parsing results
      def return_as_list(tokens):
          return ParseResults.List(tokens.asList())

  This is the mechanism used internally by the `Group` class when defined
  using `aslist=True`.

- API CHANGE
  Added `cache_hit` keyword argument to debug actions. Previously, if packrat
  parsing was enabled, the debug methods were not called in the event of cache
  hits. Now these methods will be called, with an added argument
  `cache_hit=True`.

  If you are using packrat parsing and enable debug on expressions using a
  custom debug method, you can add the `cache_hit=False` keyword argument,
  and your method will be called on packrat cache hits. If you choose not
  to add this keyword argument, the debug methods will fail silently,
  behaving as they did previously.

- When using `setDebug` with packrat parsing enabled, packrat cache hits will
  now be included in the output, shown with a leading '*'. (Previously, cache
  hits and responses were not included in debug output.) For those using custom
  debug actions, see the previous item regarding an optional API change
  for those methods.

- `setDebug` output will also show more details about what expression
  is about to be parsed (the current line of text being parsed, and
  the current parse position):

        Match integer at loc 0(1,1)
          1 2 3
          ^
        Matched integer -> ['1']

  The current debug location will also be indicated after whitespace
  has been skipped (was previously inconsistent, reported in Issue #244,
  by Frank Goyens, thanks!).

- Modified the repr() output for `ParseResults` to include the class
  name as part of the output. This is to clarify for new pyparsing users
  who misread the repr output as a tuple of a list and a dict. pyparsing
  results will now read like:
