@@ -914,6 +914,9 @@ if 0:
 else:
 
     def main():
+        import sys
+
+        sys.setrecursionlimit(5000)
         print("Verilog parser test (V %s)" % __version__)
         print(" - using pyparsing version", pyparsing.__version__)
         print(" - using Python version", sys.version)
@@ -927,8 +930,8 @@ else:
         failCount = 0
         Verilog_BNF()
         numlines = 0
-        startTime = time.clock()
-        fileDir = "verilog"
+        startTime = time.time()
+        fileDir = "../scratch/verilog"
         # ~ fileDir = "verilog/new"
         # ~ fileDir = "verilog/new2"
         # ~ fileDir = "verilog/new3"
@@ -950,9 +953,9 @@ else:
             print(fnam, len(filelines), end=" ")
             numlines += len(filelines)
             teststr = "".join(filelines)
-            time1 = time.clock()
+            time1 = time.time()
             tokens = test(teststr)
-            time2 = time.clock()
+            time2 = time.time()
             elapsed = time2 - time1
             totalTime += elapsed
             if len(tokens):
@@ -974,7 +977,7 @@ else:
                 failCount += 1
                 for i, line in enumerate(filelines, 1):
                     print("%4d: %s" % (i, line.rstrip()))
-        endTime = time.clock()
+        endTime = time.time()
         print("Total parse time:", totalTime)
         print("Total source lines:", numlines)
         print("Average lines/sec:", ("%.1f" % (float(numlines) / (totalTime + 0.05))))
