@@ -103,7 +103,7 @@ __version__ = (
         __version_info__.releaseLevel == "final"
     ]
 )
-__versionTime__ = "25 October 2020 05:09 UTC"
+__versionTime__ = "2 November 2020 17:20 UTC"
 __author__ = "Paul McGuire <ptmcg@users.sourceforge.net>"
 
 from .util import *
@@ -149,6 +149,7 @@ __all__ = [
     "Forward",
     "GoToColumn",
     "Group",
+    "IndentedBlock",
     "Keyword",
     "LineEnd",
     "LineStart",
